kubernetes-deployment-manifest/Ingress/argocdingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
 #   alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:500822580415:certificate/<certificate value>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: full-stack-ingress
spec:
  rules:
    - host: argocd.kaytheog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-declear-service
                port:
                  number: 80
